kubernetes/minikube/Kustomize/base/01-deployment-backend.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: k8s-backend
    labels:
      app: k8s-backend
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: k8s-backend
    template:
      metadata:
        labels:
          app: k8s-backend
      spec:
        containers:
        - name: k8s-backend
          image: phiroict/k8s-test-backend:20210829
          ports:
          - containerPort: 4000
