kubernetes/minikube/Kustomize/base/03-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: k8s-backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      name: backend-port
