kubernetes/minikube/Kustomize/base/04-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: k8s-frontend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: frontend-port
