kubernetes/minikube/Kustomize/base/05-gateway-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: default
spec:
  selector:
    app: k8s-frontend
  servers:
  - port:
      number: 5000
      name: frontend-port
      protocol: HTTP
    hosts:
    - istio.default.phiroict.co.nz
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - istio.default.phiroict.co.nz
  gateways:
  - default/frontend-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: frontend
        port:
          number: 5000
